--- a/style.css
+++ b/style.css
@@ -92,16 +92,16 @@ button:hover {
   background: #2980b9;
 }
 
-input[type="text"],
+/*input[type="text"],
 input[type="number"] {
-  width: 100%;
+  width: 150%;
   max-width: 300px;
   padding: 10px;
   margin: 8px 0;
   border-radius: 8px;
   border: 1px solid #dcdcdc;
   font-size: 1rem;
-}
+}*/
 
 input[type="text"]:focus,
 input[type="number"]:focus {
@@ -119,7 +119,7 @@ input[type="number"]:focus {
 
 /* Styles for HtmlForm_A_12111.html */
 form {
-  width: 90%;
+  width: 100%;
   max-width: 600px;
   margin: 20px auto;
   background-color: #fff;
@@ -144,11 +144,11 @@ strong {
   font-weight: bold;
 }
 
-input[type="text"],
+input[type="textForm"],
 input[type="password"],
 input[type="date"],
 input[type="email"],
-input[type="number"],
+input[type="numberForm"],
 input[type="file"],
 textarea,
 select {
@@ -253,7 +253,7 @@ header {
   padding: 20px;
   margin: 30px auto;
   width: 100%;
-  max-width: 800px;
+  max-width: 10000px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
 }
 
@@ -270,7 +270,7 @@ header {
 }
 
 .schedule-table th {
-  background: #3498db;
+  background: #59eb85;
   color: white;
   font-weight: 600;
 }
@@ -291,7 +291,7 @@ header {
   }
 
   .card, .profile-card, .schedule-table, form {
-    max-width: 100%;
+    max-width: 900%;
   }
 
   button, input[type="text"], input[type="number"], input[type="submit"] {
